// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense(s) totalling 
    $2.35
  </h1>
</div>
`;

exports[`should render ExpensesSummary correctly with two expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     expense(s) totalling 
    $76,544.34
  </h1>
</div>
`;
